# curve25519-dalek

./: Cargo.toml
.github/workflows/: curve25519-dalek.yml  ed25519-dalek.yml  workspace.yml  x25519-dalek.yml
curve25519-dalek/: Cargo.toml
curve25519-dalek-derive/: Cargo.toml
curve25519-dalek/benches/: dalek_benchmarks.rs
curve25519-dalek/src/: edwards.rs  encodable_curve.rs  lib.rs  ristretto.rs  scalar.rs
curve25519-dalek/src/backend/serial/u32/: scalar.rs
curve25519-dalek/src/backend/serial/u64/: constants.rs  field.rs  scalar.rs
ed25519-dalek/: Cargo.toml
ed25519-dalek/src/: lib.rs  verifying.rs
x25519-dalek/: Cargo.toml
