[package]
name = "curve25519-dalek-derive-arcium-fork"
description = "curve25519-dalek Derives (Arcium fork)"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arcium-hq/curve25519-dalek"
homepage = "https://www.arcium.com"
documentation = "https://docs.rs/curve25519-dalek-derive"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.31"
syn = { version = "2.0.27", features = ["full"] }
